--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.1.0",
     "font-awesome": "^4.7.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.5",
+    "react-datetime": "^3.1.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
